Flush out Cum Drive and move it to its own page

--- a/index.html
+++ b/index.html
@@ -7,128 +7,26 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Good Dog</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <main class="donationBody">
-      <header><h1>Oreo's 2024 Cum Drive</h1></header>
-      <section>
-        Welcome to Oreo's Cum Drive! Wanna help load up a pup? I'm seeking any
-        and all donations I can get!
-      </section>
-      <section>
-        <h2>⁉️ What is this? ⁉️</h2>
-        <p>
-          Hello! I'm Pup Oreo, and I'm asking for people on the internet to act
-          as donors and send me their cum in the mail! I'm hoping to get as many
-          as I can together. Once I have a bunch gathered, I'll mix it all up
-          and take videos of me getting as much enjoyment out of it as I can,
-          and then share them with everyone.
-        </p>
-        <p>
-          Donors will get to make special requests about what I do with the
-          loads and I'll do my best to make everyone happy. I'll also upload
-          donation stats and load counts to this website once donations are
-          complete!
-        </p>
-        <p>
-          If donors record videos of them collecting their samples, I'll include
-          it in a compilation video I make at the end.
-        </p>
-      </section>
-      <section>
-        <h2>💚 How to Donate 💚</h2>
-        <h4>Donation deadline of <u>April 14th</u></h4>
-        <ol class="faq">
-          <li>
-            Fill out this form so that I know that you'll be donating and how to
-            contact you with updates
-          </li>
-          <li>
-            Start saving up cum!
-            <ul>
-              <li>
-                Feel free to send as much as you like! I'll be very grateful for
-                whatever is donated. The more the merrier though 😈
-              </li>
-              <li>
-                Want to be included in a video compilation? Send me a video of
-                you making your donation 💦
-              </li>
-            </ul>
-          </li>
-          <li>
-            Mail your donation to the following address:
-            <ul>
-              <li>Insert Address here</li>
-              <li>
-                The faster the shipping the better, but don't break the bank,
-                it'll be okay!
-              </li>
-            </ul>
-          </li>
-          <li>
-            Once that's done, you're all set! Feel free to send me a message
-            saying its on its way so I know to look for it. And thank you, this
-            is a huge kink of mine and I'm really greatful you're helping me
-            indulge.
-          </li>
-        </ol>
-        Any Questions? <br /><br />
-        Check out the FAQ, and if that doesn't help reach out to me on Telegram:
-        <a href="https://t.me/hyenafox" target="_blank">@hyenafox</a>
-      </section>
-      <section>
-        <h2>✅ FAQ ✅</h2>
-        <ul class="faq">
-          <li>
-            What should I ship it in?
-            <ul>
-              <li>
-                The simplest thing would be to fill up some condoms, put them in
-                a ziploc bag, and mail them! Though if you want to ship me a
-                container of cum I'd be a very happy dog.
-              </li>
-            </ul>
-          </li>
-          <br />
-          <li>
-            Do I need to keep the samples cold in shipment?
-            <ul>
-              <li>
-                Not particularly. As long as the package gets here in few days
-                and the cum was frozen ahead of time, it should be okay.
-              </li>
-            </ul>
-          </li>
-          <br />
-          <li>
-            Won't it get gross on the way?
-            <ul>
-              <li>
-                Maybe, but it'll probably be okay! I'll put it in the freezer
-                once it arrives and make sure everything seems okay. If not I
-                can inform the donor about the samples not making it.
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
+      <header>
+        <img
+          src="./config/images/Oreo_Logo.png"
+          alt="Oreo's 2024 Cum Drive"
+          class="cumDrive"
+        />
+        <br />
+        <h1>Hi, I'm Oreo!</h1>
+        <h2>
+          This page is a work in progress, but while you're here, take a look at
+          my <a href="./2024-cum-drive.html">Cum Drive</a>. 💦
+        </h2>
+      </header>
     </main>
-
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
-    <!-- <script src="" async defer></script> -->
   </body>
-  <footer>
-    🩷 Made with 💦 by
-    <a href="https://twitter.com/CreamFilledPup" target="_blank">Oreo</a> 🐶
-  </footer>
 </html>
