Modify og:description text

--- a/2024-cum-drive.html
+++ b/2024-cum-drive.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Oreo's 2024 Cum Drive" />
     <meta
       property="og:description"
-      content="Wanna help load up a pup? Oreo's seeking donations now 💚"
+      content="Wanna help load up a pup? I'm now open for donations 💚"
     />
     <meta
       property="og:link"
