Create donate page and update meta

--- a/donate.html
+++ b/donate.html
@@ -3,13 +3,24 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Oreo's 2024 Cum Drive</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/FoxHyena/Cum-Drive/main/config/images/oreo_drive_logo.png"
+    />
+    <meta property="og:title" content="Oreo's 2024 Cum Drive" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:description"
+      content="Wanna help load up a pup? I'm now open for donations 💚"
+    />
+    <meta property="og:link" content="https://cumdump.dog/donate.html" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
