--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Hi, I'm Oreo!</h1>
         <h2>
           This page is a work in progress, but while you're here, take a look at
-          my <a href="./2024-cum-drive.html">Cum Drive</a>. 💦
+          my <a href="./donate.html">Cum Drive</a>. 💦
         </h2>
       </header>
     </main>
