Create donate page and update meta (#2)

--- a/donate.html
+++ b/donate.html
@@ -10,16 +10,17 @@
     <title>Oreo's 2024 Cum Drive</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="./config/images/oreo_drive_logo.png" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/FoxHyena/Cum-Drive/main/config/images/oreo_drive_logo.png"
+    />
     <meta property="og:title" content="Oreo's 2024 Cum Drive" />
+    <meta property="og:type" content="article" />
     <meta
       property="og:description"
       content="Wanna help load up a pup? I'm now open for donations 💚"
     />
-    <meta
-      property="og:link"
-      content="https://cumdump.dog/2024-cum-drive.html"
-    />
+    <meta property="og:link" content="https://cumdump.dog/donate.html" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
