Update tab icon and index description

--- a/donate.html
+++ b/donate.html
@@ -22,6 +22,11 @@
     />
     <meta property="og:link" content="https://cumdump.dog/donate.html" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./config/images/oreo_tab_icon.png"
+    />
   </head>
   <body>
     <main class="donationBody">
