--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./config/images/oreo_tab_icon.png"
+    />
   </head>
   <body>
     <main class="donationBody">
@@ -23,8 +28,8 @@
         <br />
         <h1>Hi, I'm Oreo!</h1>
         <h2>
-          This page is a work in progress, but while you're here, take a look at
-          my <a href="./donate.html">Cum Drive</a>. 💦
+          This page is a work in progress, but while you're here, consider
+          donating to my <a href="./donate.html">Cum Drive</a> 💦
         </h2>
       </header>
     </main>
