--- a/donate.html
+++ b/donate.html
@@ -92,7 +92,7 @@
             </ul>
           </li>
           <li>
-            Mail your donation to the following address:
+            Mail your donations to the following address:
             <ul>
               <li>
                 <u>PO Box 147<br />South San Francisco, CA 94083</u>
