--- a/index.html
+++ b/index.html
@@ -32,6 +32,37 @@
           donating to my <a href="./donate.html">Cum Drive</a> 💦
         </h2>
       </header>
+      <ul class="linkList">
+        <li>
+          <div>
+            <a href="https://t.me/hyenafox" target="_blank">
+              <img src="./config/images/logos/TelegramLogo.png" class="logo" />
+              <div>Telegram</div></a
+            >
+          </div>
+        </li>
+        <!-- <li>
+          <a href="https://t.me/slutpup" target="_blank"
+            >Telegram Porn Channel</a
+          >
+        </li>
+        <li>
+          <a href="https://twitter.com/hyenafoxx" target="_blank"
+            >Twitter (X)</a
+          >
+        </li>
+        <li>
+          <a href="https://twitter.com/CreamFilledPup" target="_blank"
+            >AD Twitter (X)</a
+          >
+        </li>
+        <li>
+          <a href="https://bsky.app/profile/cumdump.dog" target="_blank"
+            >Bluesky</a
+          >
+        </li> -->
+        <!-- <li><div></div></li> -->
+      </ul>
     </main>
   </body>
 </html>
